<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="192dp"
    android:background="?attr/colorPrimaryDark"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:orientation="vertical"
    android:gravity="bottom">


    <View
        android:id="@+id/settingsBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="#ea023b54"
        android:visibility="visible"  />

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@string/app_bar_font"
        android:text="@string/settings"
        android:textAllCaps="true"
        android:textColor="@color/kinda_white"
        android:textSize="24sp"
        android:textStyle="bold"  />

    <Switch
        android:id="@+id/push_Switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-smallcaps"
        android:switchPadding="50dp"
        android:text="@string/push_notifications"
        android:textColor="@color/kinda_white"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>