<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/registerRunner"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/running_man2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/registerBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="#ea023b54"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="283dp"
        android:layout_height="47dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="#f7f7f7"
        android:ems="10"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"
        android:textColor="#f7f7f7"
        android:textColorHint="#f7f7f7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registerBar"
        android:layout_width="0dp"
        android:layout_height="50sp"
        android:layout_marginBottom="8dp"
        android:background="#afac0641"
        app:layout_constraintBottom_toBottomOf="@+id/registerBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="casual"
        android:text="@string/register_registration"
        android:textAllCaps="true"
        android:textColor="#f7f7f7"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/registerBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="@+id/registerBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/registerName"
        android:layout_width="283dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/register_name"
        android:inputType="textPersonName"
        android:backgroundTint="#f7f7f7"
        android:textColorHint="#f7f7f7"
        android:textColor="#f7f7f7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"

        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerName"
        app:layout_constraintVertical_bias="0.016">

        <RadioButton
            android:id="@+id/male_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/background_light"
            android:text="@string/register_male"
            android:textColor="#f7f7f7"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="99dp" />

        <RadioButton
            android:id="@+id/female_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/background_light"
            android:text="@string/register_female"
            android:textColor="#f7f7f7"
            tools:layout_editor_absoluteX="196dp" />
    </RadioGroup>

    <EditText
        android:id="@+id/registerWeight"
        android:layout_width="123dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#f7f7f7"
        android:ems="10"
        android:hint="@string/register_weight_kg"
        android:inputType="number"
        android:textColor="#f7f7f7"
        android:textColorHint="#f7f7f7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.787"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/registerHeight"
        android:layout_width="123dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#f7f7f7"
        android:ems="10"
        android:hint="@string/register_height_m"
        android:inputType="numberDecimal"
        android:textColor="#f7f7f7"
        android:textColorHint="#f7f7f7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
        app:layout_constraintVertical_bias="0.0" />


    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="283dp"
        android:layout_height="46dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#f7f7f7"
        android:ems="10"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        android:textColor="#f7f7f7"
        android:textColorHint="#f7f7f7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerWeight"
        app:layout_constraintVertical_bias="0.0" />


    <EditText
        android:id="@+id/birthday_datePicker"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="#f7f7f7"
        android:ems="10"
        android:hint="@string/register_bday"
        android:inputType="date"
        android:textColor="#f7f7f7"
        android:textColorHint="#f7f7f7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPassword" />

    <Button
        android:id="@+id/registerRegister"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:background="#ac0641"
        android:text="Register"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthday_datePicker"
        app:layout_constraintVertical_bias="0.110000014" />

    <Button
        android:id="@+id/registerBackButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/back"
        app:layout_constraintBottom_toBottomOf="@+id/registerBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/registerBar"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>